# web-scrap-bot

./: README.md  ai_handler.py  app.py  embedding.py  exp.py  main.py  pyproject.toml  requirements.txt  sample.html  test.ipynb  text_processing.py  webscrap.py
